Add VERDI 2.0 changes